--- a/TaskMentor/Mentor/templates/core/teacher_dashboard.html
+++ b/TaskMentor/Mentor/templates/core/teacher_dashboard.html
@@ -35,7 +35,7 @@
                         </div>
                     {% else %}
                         <p>Подключите Google Calendar для синхронизации задач</p>
-                        <a href="/accounts/google/login/" class="btn btn-primary">
+                        <a href="/accounts/google/login/?process=connect&next=/teacher/dashboard/" class="btn btn-primary">
                             <i class="fab fa-google"></i> Подключить Google Calendar
                         </a>
                         <small class="d-block text-muted mt-2">
